# web-app-template

backend/: .gitignore  pyproject.toml
backend/app/app/: renderers.py  settings.py  urls.py
backend/app/auth_app/: managers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/app/auth_app/migrations/: 0001_initial.py
backend/app/shared/: serializers.py
frontend/: package-lock.json  package.json
frontend/src/: Root.jsx  main.jsx
frontend/src/components/: Header.jsx  LoginForm.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Account.jsx  Error.jsx  Login.jsx
frontend/src/services/: AuthService.jsx
